# glosentraV1

./: 404.html  CNAME  DEPLOYMENT-SUMMARY.md  README-GitHub-Pages.md  README.md  SETUP-GitHub-Pages.md  deploy.bat  deploy.ps1  docs.html  env.example  finetune.html  package.json  pyproject.toml  realtime.html
backend/: pyproject.toml
backend/apps/web/: app.py  diagnostics.py  requirements.txt
backend/apps/web/glosentra/: __init__.py  config.py
backend/apps/web/glosentra/core/: chroma_integration.py  db.py  inference.py  model_registry.py
backend/apps/web/glosentra/routes/: __init__.py  api.py  pages.py
backend/apps/web/glosentra/services/: analytics.py
backend/data/chroma_db/: chroma.sqlite3
backend/scripts/: ingest_docs.py  run_dev.py  run_prod.py
backend/tests/: test_web_smoke.py
frontend/: about.html  analytics.html  deploy_classify.html  deploy_detect.html  deploy_pose.html  deploy_segment.html  docs.html  finetune.html  realtime.html
frontend/static/js/: prefetch.js  process.js
