[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glosentra"
version = "1.0.0"
description = "Glosentra - Advanced Computer Vision Platform"
authors = [{name = "Glosentra Team"}]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ultralytics*"]
